# vegura-server

./: .gitignore  CMakeLists.txt  config.lua  tfs.exp  tfs.lib
.github/workflows/: deployment.yml
cmake/: FindLuaJIT.cmake  FindMySQL.cmake  cotire.cmake
data/: global.lua
data/XML/: groups.xml  quests.xml  spellboosts.xml  tasks.xml
data/actions/: actions.xml
data/actions/scripts/spellbooster/: tome-of-spell-mastery.lua
data/actions/scripts/veguracoin/: vegura-coin.lua
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/others/: extendedopcode.lua  firstitems.lua  login.lua  taskKill.lua
data/events/: events.xml
data/events/scripts/: player.lua
data/globalevents/: globalevents.xml
data/globalevents/scripts/: slot_machine-wins-listener.lua
data/items/: items.otb  items.xml
data/lib/: boost_types.lua  json.lua  lib.lua  monster_ids.lua  spell-boot-manager.lua  spell_boost_manager.lua  taskManager.lua
data/lib/core/: core.lua  player.lua
data/monster/: monsters.xml
data/monster/vegura/: test_monster.xml
data/npc/: Ezra.xml
data/npc/lib/: instantTravel.lua  npc.lua
data/npc/lib/npcsystem/: modules.lua
data/npc/scripts/: Captain Greyhound.lua  Ezra.lua
data/reports/: Gm Almir report.txt  Gm Vegura report.txt
data/spells/: spells.xml
data/spells/lib/: spells.lua
data/spells/scripts/attack/: berserk.lua  energy beam.lua  energy strike.lua  (+9 more)
data/world/: global-spawn.xml  global.otbm
src/: CMakeLists.txt  combat.cpp  combat.h  condition.h  configmanager.h  connection.cpp  connection.h  const.h  creatureevent.h  database.cpp  database.h  fileloader.h  iologindata.cpp  iologindata.h  luascript.cpp  luascript.h  monsterTaskManager.cpp  monsterTaskManager.h  party.h  player.cpp  player.h  position.h  protocolgame.cpp  scriptmanager.cpp  server.cpp  server.h  spells.cpp  spells.h  tools.cpp  tools.h
vc14/: theforgottenserver.sln  theforgottenserver.vcxproj
(+13 files in other folders)
